# kaggle_repo

./: .gitignore  README.md  justfile  pyproject.toml  setup_python.sh
app/: app.py
modules/plotly/: config.py
slides/: template.md
