[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["ibukikaburagi <63328418+1buk109@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "modules", from = "." },
    { include = "dataset", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
ruff = "^0.5.3"
tqdm = "^4.66.4"


[tool.poetry.group.demo.dependencies]
ipykernel = "^6.29.5"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
