[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["ibukikaburagi <63328418+1buk109@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "modules", from = "." },
    { include = "dataset", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
dash = "^2.17.1"
kaleido = "0.2.1"
mypy = "^1.10.1"
nbformat = "^5.10.4"
pytest = "^8.2.2"
ruff = "^0.5.3"
tqdm = "^4.66.4"

[tool.poetry.group.demo.dependencies]
ipykernel = "^6.29.5"
plotly = "^5.22.0"

[tool.poetry.scripts]
app = "app.app:main"
test = "pytest:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = true
warn_no_return = True
warn_unused_ignores = True
